2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Convert S_process to Boot.
	* src/interp/spad.lisp: delete S_process, add Boot
	version to:
	src/interp/ncomp.boot

2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nlib.lisp: Do not add "NIL" extension
	to file names.

2012-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/vmlisp.lisp: Workaround for opening
	named pipes.

2012-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/si.spad.pamphlet,
	src/algebra/table.spad.pamphlet,
	src/algebra/sf.spad.pamphlet,
	src/algebra/string.spad.pamphlet,
	src/algebra/u32vec.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet,
	src/algebra/array1.spad.pamphlet,
	src/interp/scan.boot, src/interp/nrunfast.boot,
	src/interp/clam.boot, src/interp/slam.boot,
	src/interp/debug.lisp, src/interp/preparse.lisp,
	src/interp/primitives.lisp, src/interp/bootlex.lisp,
	src/interp/interop.boot, src/interp/g-opt.boot,
	src/interp/g-util.boot, src/interp/pf2sex.boot,
	src/interp/i-funsel.boot, src/interp/g-boot.boot,
	src/interp/macros.lisp, src/interp/vmlisp.lisp:
	Rework support macros.

2012-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Make libspad available
	during algebra build.

2012-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot: Fix ')compile' on '*.NRLIB'.

2012-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac, src/interp/macros.lisp,
	src/interp/vmlisp.lisp: Minor cleanups.

2012-01-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nlib.lisp: Fix build with GCL broken
	in last commit.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nlib.lisp: Clean up.
	src/interp/i-syscmd.boot, src/interp/compat.boot,
	src/interp/pathname.boot, src/interp/i-toplev.boot,
	src/interp/daase.lisp, src/interp/vmlisp.lisp:
	Adjust.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Remove patches.lisp.