@@ -397,9 +397,9 @@ KeyedAccessFile(Entry): KAFcategory == KAFcapsule where
 
         defstream(fn: Name, mode: IOMode): FileState ==
             mode = "input"  =>
-              RDEFINSTREAM(fn::String)$Lisp
+                rMkIstream(fn::String)$Lisp
             mode = "output" =>
-              RDEFOUTSTREAM(fn::String)$Lisp
+                rMkOstream(fn::String)$Lisp
             error ["IO mode must be input or output", mode]
 
         ---- From Set ----
