@@ -191,7 +191,7 @@ Integer: Join(IntegerNumberSystem, ConvertibleTo String, OpenMath,_
       min(x,y) == MIN(x,y)$Lisp
       divide(x,y) == DIVIDE2(x,y)$Lisp
       x quo y == QUOTIENT2(x,y)$Lisp
-      x rem y == REMAINDER2(x,y)$Lisp
+      x rem y == REM(x, y)$Lisp
       shift(x, y) == ASH(x,y)$Lisp
       x exquo y ==
          zero? y => "failed"
