@@ -280,8 +280,6 @@
 (DEFUN MONITOR-EVALTRAN (X FG)
   (if (HAS_SHARP_VAR X) (MONITOR-EVALTRAN1 X FG) X))
 
-(define-function 'MONITOR\,EVALTRAN #'MONITOR-EVALTRAN)
-
 (DEFUN MONITOR-EVALTRAN1 (X FG)
   (let (n)
     (COND
