@@ -1,5 +1,13 @@
 2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/bootlex.lisp, src/interp/debug.lisp,
+	src/interp/define.boot, src/interp/primitives.lisp,
+	src/interp/spad.lisp, src/interp/trace.boot,
+	src/algebra/files.spad.pamphlet,
+	src/algebra/integer.spad.pamphlet: Misc cleanups.
+
+2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	Convert S_process to Boot.
 	* src/interp/spad.lisp: delete S_process, add Boot
 	version to:
